--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -13,3 +13,8 @@ services:
         # this means you cannot fetch services directly from the container via $container->get()
         # if you need to do this, you can override this setting on individual services
         public: false
+    twig_extension.price:
+        class: CpanelBundle\Twig\PriceExtension
+        public: false
+        tags:
+            - { name: twig.extension }
