--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -9,11 +9,15 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
+    app.locales: es|en|fr|de
+    locale: es
 
 framework:
     #esi: ~
-    #translator: { fallbacks: ['%locale%'] }
+    translator: { fallbacks: ['%locale%'] }
+    translator:
+        paths:
+            - '%kernel.project_dir%/app/Resources/translations'
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
