--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,14 +1,16 @@
 website:
     resource: "@WebsiteBundle/Resources/config/routing.yml"
-    prefix:   /
+    prefix:   /{_locale}
+    requirements:
+        _locale: '%app.locales%'
 
 cpanel:
     resource: "@CpanelBundle/Resources/config/routing.yml"
-    prefix:   /
+    prefix:   /admin
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
 api:
     resource: "@ApiBundle/Resources/config/routing.yml"
-    prefix:   /
+    prefix:   /api
